Update red knight info, change project showcase in index.html

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                     
                 <ul>In addition to finishing my bachelors degree in computer science, I'm also currently pursuing:
                     <li>MSU Game Design and Development with Unity 2020 Specialization (in progress - 65% complete)</li>
-                    <li>IBM AI Engineering Professional Certificate (machine learning - finishing by March 2023)</li>
+                    <li>IBM AI Engineering Professional Certificate (machine learning - finishing in March 2023)</li>
                 </ul>
 
                 <div class="clearfix"></div>
