--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,26 @@
 
     <div class="container">
 
+        <!-- Red Knight -->
+        <div class="row">
+            <div class="box">      
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project </h2>
+                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
+                    <hr>
+                    <a href="projects/red-knight.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released March 2023</p>
+                    <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
+                        It was built by myself and 3 other students with the Unity game engine.</p>
+                    <a href="projects/red-knight.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
         <!-- Shader Demo -->
         <div class="row">
             <div class="box">
@@ -93,27 +113,6 @@
                     <p>A demo showcasing a range of diffeent custom shaders I created using Unity's Universal Render Pipeline, Shader Graph,
                         and HLSL.</p>
                     <a href="projects/shader-demo.html" class="btn btn-default btn-lg">Read More</a>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- 2D Platformer -->
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> <strong>2D Platformer Game</strong> - Student Project</h2>
-                    <h2 class="intro-text text-center"> <strong>JavaScript, Tiled, NPM | Game Dev | Agile</strong></h2>
-                    <hr>
-                    <a href="projects/2d-platformer.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>Released September 2022</p>
-                    <p>A 2D platformer game where you must navigate each carefully crafted level while fighting you way
-                    through enemies and jumping on platforms!</p>
-                    <a href="projects/2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -137,26 +136,6 @@
             </div>
         </div>
 
-        <!-- Red Knight -->
-        <div class="row">
-            <div class="box">      
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project </h2>
-                    <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
-                    <hr>
-                    <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>In Development - Expected Release March 2023</p>
-                    <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
-                        It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
-                    <a href="projects/red-knight.html" class="btn btn-default btn-lg">Read More</a>
-                </div>
-            </div>
-        </div>
-
         <!-- Star Hunter -->
         <div class="row">
             <div class="box">
@@ -176,21 +155,22 @@
             </div>
         </div>
 
-        <!-- Instagram Filter -->
+        <!-- 2D Platformer -->
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> Image Processing - Student Project</h2>
-                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
+                    <h2 class="intro-text text-center"> <strong>2D Platformer Game</strong> - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript, Tiled, NPM | Game Dev | Agile</strong></h2>
                     <hr>
-                    <a href="projects/instagram-filter.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    <a href="projects/2d-platformer.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>Released March 2022</p>
-                    <p>An image processing tool that allows a user to apply 10 different filters as well as other tools to an image</p>
-                    <a href="projects/instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
+                    <p>Released September 2022</p>
+                    <p>A 2D platformer game where you must navigate each carefully crafted level while fighting you way
+                    through enemies and jumping on platforms!</p>
+                    <a href="projects/2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -211,6 +191,25 @@
                     <p>Released September 2022</p>
                     <p>A dynamic web application allowing users to monitor and control devices in their smart home.<p>
                     <a href="projects/smart-home.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Instagram Filter -->
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> Image Processing - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
+                    <hr>
+                    <a href="projects/instagram-filter.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released March 2022</p>
+                    <p>An image processing tool that allows a user to apply 10 different filters as well as other tools to an image</p>
+                    <a href="projects/instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
