--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                
             <div class="box">
                  <h1 class="intro-text text-center">
-                       <strong>Current projects:</strong>  
+                       <strong>Featured projects:</strong>  
                     </h1>
                 <div class="col-lg-12">
                     <hr>
@@ -147,28 +147,49 @@
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
-                        It is currently in development being built by myself and 3 other students using the Unity game engine.</p>
+                        It was built by myself and 3 other students with the Unity game engine.</p>
                     <a href="projects/red-knight.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
                 </div>
-                 <div class="col-lg-12">
+
+                <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">
-                        <strong>Star Hunter</strong> - Bow and Arrow VR Project
-                    </h2>
+                    <h2 class="intro-text text-center"> <strong>Shader Demo</strong> - Personal Project</h2>
                     <hr>
-                    <a href="projects/star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="projects/shader-demo.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
-                        It is currently in development being made with the Unity game engine, and I am the sole developer.
-                    </p>
-                    <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
-                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
-                    <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
+                    <p>February 2023</p>
+                    <p>A demo showcasing a range of diffeent custom shaders I created using Unity's Universal Render Pipeline, Shader Graph,
+                        and HLSL.</p>
+                    <a href="projects/shader-demo.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
                 </div>
             </div>
+
+            <div class="box">
+                <h1 class="intro-text text-center">
+                      <strong>Current projects:</strong>  
+                </h1>
+                <div class="col-lg-12">
+                   <hr>
+                   <h2 class="intro-text text-center">
+                       <strong>Star Hunter</strong> - Bow and Arrow VR Project
+                   </h2>
+                   <hr>
+                   <a href="projects/star-hunter.html">
+                       <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                   </a>
+                   <hr class="visible-xs">
+                   <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
+                       It is currently in development being made with the Unity game engine, and I am the sole developer.
+                   </p>
+                   <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
+                   <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
+                   <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
+               </div>
+           </div>
         </div>
     </div>
     <!-- /.container -->
