--- a/projects/shader-demo.html
+++ b/projects/shader-demo.html
@@ -159,7 +159,7 @@
                         </ul>
 
                     <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
-                    <!-- <a href="https://github.com/samsherrod/shader-demo" target="_blank" class="btn btn-default btn-lg">View Source Code</a> -->
+                    <a href="https://github.com/samsherrod/shader-demo" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
             </div>
         </div>
     </div>
