Update Red Knight images throughout website

--- a/projects/red-knight.html
+++ b/projects/red-knight.html
@@ -90,8 +90,29 @@
                         Student Group Games Development Project<br />
                         <strong>Role: </strong> Lead Programmer
                     </p> 
-                    <a href="../assets/img/projects/Red Knight/red-knight-prototype-img.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
+                    <a href="../assets/img/projects/Red Knight/Red Knight Title Screen.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 1.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 2.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 2.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 3.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 3.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 4.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 4.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 5.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 5.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 6.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 6.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Red Knight/Red Knight - Level 7.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/Red Knight - Level 7.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
