--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
+                                <img class="img-responsive img-full" src="assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                             </div>
                         </div>
 
@@ -143,7 +143,7 @@
                     
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
