--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
                     <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2023</p>
