Update Resume, change Red Knight Cover Pictures, update star hunter description, change project order

--- a/projects/star-hunter.html
+++ b/projects/star-hunter.html
@@ -86,7 +86,7 @@
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        In Development - Expected Release March 2023</br />
+                        Released March 2023</br />
                         Student Solo Virtual Reality Project<br />
                     </p> 
                     <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
@@ -108,10 +108,10 @@
                         When all of the stars are connected, an image will be shown, and the next set of stars will be displayed in the sky. 
                         I'm very interested in the field of virtual reality, and have thoroughly enjoyed working on this project. It is made
                         in the Unity game engine using Unity's XR Toolkit, and is tested for the Meta Quest 2.</p>
-                    <p>I am the sole developer on this project, which is for University of London's Virtual Reality module. The game will be finished and 
-                        playable on Windows, Mac, WebGL, and the Meta Quest 2 in March 2023.</p>
+                    <p>I was the sole developer on this project, which was made for University of London's Virtual Reality module. The game is 
+                        playable on on the Meta Quest 2 through Windows and Mac.</p>
 
-                    <p><strong>Game features</strong> will include:
+                    <p><strong>Game features</strong> include:
                         <ul>
                             <li>a working virtual bow and arrow with precise aiming</li>
                             <li>virtual hands that move and animate with the player's hands</li>
@@ -140,7 +140,6 @@
                     <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
                     <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
                     <a href="https://github.com/samsherrod/Star-Hunter" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
-                    <p><strong>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</strong></p>
                 </div>
             </div>
         </div>
