--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Shader Demo/Hologram Shader.png" alt="">
@@ -143,7 +143,7 @@
                     
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
