--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
                     <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight - Level 1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2023</p>
@@ -117,6 +117,25 @@
             </div>
         </div>
 
+        <!-- Star Hunter -->
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Star Hunter</strong> Bow and Arrow VR Project - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C# | VR | Game Dev | Unity</strong></h2>
+                    <hr>
+                    <a href="projects/star-hunter.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released March 2023</p>
+                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
+                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
         <!-- Ottodecks -->
         <div class="row">
             <div class="box">
@@ -132,25 +151,6 @@
                     <p>Released March 2022</p>
                     <p>A DJ application that allows a user to add music tracks to a playlist, upload selected tracks onto 2 separate decks, and manipulate them as a DJ would.</p>
                     <a href="projects/ottodecks-dj-app.html" class="btn btn-default btn-lg">Read More</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Star Hunter -->
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> <strong>Star Hunter</strong> Bow and Arrow VR Project - Student Project</h2>
-                    <h2 class="intro-text text-center"> <strong>C# | VR Dev | Game Dev | Unity</strong></h2>
-                    <hr>
-                    <a href="projects/star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>In Development - Expected Release March 2023</p>
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
