Edit Index page for Star Hunter

--- a/index.html
+++ b/index.html
@@ -166,30 +166,24 @@
                     <a href="projects/shader-demo.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/shader-demo" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
                 </div>
-            </div>
 
-            <div class="box">
-                <h1 class="intro-text text-center">
-                      <strong>Current projects:</strong>  
-                </h1>
                 <div class="col-lg-12">
-                   <hr>
-                   <h2 class="intro-text text-center">
-                       <strong>Star Hunter</strong> - Bow and Arrow VR Project
-                   </h2>
-                   <hr>
-                   <a href="projects/star-hunter.html">
-                       <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
-                   </a>
-                   <hr class="visible-xs">
-                   <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
-                       It is currently in development being made with the Unity game engine, and I am the sole developer.
-                   </p>
-                   <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
-                   <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
-                   <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
-               </div>
-           </div>
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Star Hunter</strong> - Bow and Arrow VR Project
+                    </h2>
+                    <hr>
+                    <a href="projects/star-hunter.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Star Hunter is a casual VR game I created where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
+                    </p>
+                    <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
+                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="https://samsherrod.itch.io/star-hunter" target="_blank" class="btn btn-default btn-lg">Download on Itch.io</a>
+                </div>
+            </div>
         </div>
     </div>
     <!-- /.container -->
