Update about page

--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
     })
     </script>
 
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+
 </body>
 
 </html>
