--- a/projects/red-knight.html
+++ b/projects/red-knight.html
@@ -128,8 +128,8 @@
                         <ul>
                             <li>building a game manager script that persists between scenes, which keeps track of the player's stats such
                                  as score, lives, bomb count, key count, and the player's health.</li>
-                            <li>optimizing and improving performance by more than 50% by researching best practices, as well as implenting
-                                design patterns such as a singleton for the game managger script, and object pooling for the player's bullets,
+                            <li>optimising and improving performance by more than 50% by researching best practices, as well as implementing
+                                design patterns such as a singleton for the game manager script, and object pooling for the player's bullets,
                                 bombs, bomb explosion particle effects, enemy projectiles, and boss projectiles.</li>
                             <li>creating a damage script that is attached to the player's bullets, garlic bombs, enemy projectiles, enemies, 
                                 spikes, and the boss. It included functionality to be able to customize the amount of damage in the inspector, 
@@ -141,7 +141,7 @@
                                 functions for each inherited classes allowing them to be independent and yet still share some code from a
                                 parent class such as current and initial health, being able to take damage, or dying. The player and boss each 
                                 have an amount of time they are invincible for upon taking damage as well.</li>
-                            <li>creating all aspects of the UI integrating it with the the player's stats and the game manager script, as
+                            <li>creating all aspects of the UI integrating it with the player's stats and the game manager script, as
                                 well as for the boss' health bar. This includes designing and programming a UI manager, a main menu, and a
                                 pause menu with a controls page, level selection page, credits page, resume, and exit game functions.</li>
                             <li>creating a basic camera controller script with parallax that follows the player and is clamped between 4 2d
@@ -150,16 +150,16 @@
                             <li>debugging, testing, and fixing bugs in any phase of the development</li>
                             <li>creating a tilemap system with rule tiles, colliders, sorting layers, and functionality for teammates to
                                  quickly prototype new levels in an easy and flexible way.</li>
-                            <li>creating a flexible pickup system to allow the player to pickup keys and bombs. The key and bomb classes
+                            <li>creating a flexible pickup system to allow the player to pick up keys and bombs. The key and bomb classes
                                 inherit from a base pickup class.</li>
                             <li>designing game mechanics including using garlic bombs, and responsive jump controls</li>
                             <li>setting up the player's animation state machine, and connecting it through code using an enum to keep track
                                 of which state the player is in.</li>
-                            <li>creating our GitHub repository, as well as commiting, pushing, and merging branches</li>
+                            <li>creating our GitHub repository, as well as committing, pushing, and merging branches</li>
                             <li>building it for WebGL and deploying it on Itch.io</li>
                             <li>managing all of our files including our GDD, references, weekly tasks lists, features and more on
                                  our Google Drive.</li>
-                            <li>sending it out for testing to our school community on slack, and adjusting game features and prefrences based
+                            <li>sending it out for testing to our school community on slack, and adjusting game features and preferences based
                                 on user feedback.
                             </li>
                         </ul>
