--- a/projects/red-knight.html
+++ b/projects/red-knight.html
@@ -144,7 +144,7 @@
                             <li>creating all aspects of the UI integrating it with the player's stats and the game manager script, as
                                 well as for the boss' health bar. This includes designing and programming a UI manager, a main menu, and a
                                 pause menu with a controls page, level selection page, credits page, resume, and exit game functions.</li>
-                            <li>creating a basic camera controller script with parallax that follows the player and is clamped between 4 2d
+                            <li>creating a basic camera controller script with parallax that follows the player and is clamped between four 2D
                                 edge colliders representing the edges of each rectangular level.</li>
                             <li>creating a fade animation in between scenes</li>
                             <li>debugging, testing, and fixing bugs in any phase of the development</li>
