--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
+                                <img class="img-responsive img-full" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                            </div>
+                            <div class="item">
                                 <img class="img-responsive img-full" src="assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
                             </div>
                             <div class="item">
@@ -133,8 +136,24 @@
                
             <div class="box">
                  <h1 class="intro-text text-center">
-                       <strong>Featured projects:</strong>  
-                    </h1>
+                    <strong>Featured projects:</strong>  
+                </h1>
+
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> - Personal Project</h2>
+                    <hr>
+                    <a href="projects/crypt-raider.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>April 2023</p>
+                    <p>Crypt Raider is a 3D demo project made in Unreal Engine 5. The goal is to collect the golden statue and make your way to 
+                        the locked door.</p>
+                    <a href="projects/crypt-raider.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="https://samsherrod.itch.io/crypt-raider" target="_blank" class="btn btn-default btn-lg">View Demo Online</a>
+                </div>
+
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
@@ -146,6 +165,7 @@
                         <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/Red Knight Title Screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
+                    <p>March 2023</p>
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It was built by myself and 3 other students with the Unity game engine.</p>
                     <a href="projects/red-knight.html" class="btn btn-default btn-lg">Learn More</a>
