--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,25 @@
 
     <div class="container">
 
+        <!-- Crypt Raider -->
+        <div class="row">
+            <div class="box">      
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> 3D Puzzle Demo - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C++ | Game Dev | Unreal Engine 5 | UE5 Blueprints</strong></h2>
+                    <hr>
+                    <a href="projects/crypt-raider.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released April 2023</p>
+                    <p>Crypt Raider is a 3D demo project made in Unreal Engine 5 programmed with C++ and Unreal Engine 5's visual scripting system,
+                         Blueprints. The <strong>goal</strong> of the game is to figure out how to take the golden statue out of the mausoleum.</p>
+                    <a href="projects/crypt-raider.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
         <!-- Red Knight -->
         <div class="row">
             <div class="box">      
@@ -185,7 +204,7 @@
                     <h2 class="intro-text text-center"> <strong>Front and Backend Development</strong></h2>
                     <hr>
                     <a href="projects/smart-home.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/smart-home/add device.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Smart-Home/add device.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released September 2022</p>
