Update about.html and index.html

--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@
                     coupled with a computer science background. I have real world skills of team leadership, communication,
                     and decision making, and an excellent understanding of accounting, and finance.</p>
                 
-                <p>I'm a final year bachelors of computer science student at the University of London expecting to graduate
-                    in March, 2024 with a gpa of 4.0 (First class Honours). I am actively looking to join 
+                <p>I'm a final year bachelors of computer science student at the University of London graduating
+                    in September, 2023 with a gpa of 4.0 (First class Honours). I am actively looking to join 
                     a AAA studio to collaborate with, and learn all aspects of software development within the games 
                     industry.</p>
 
@@ -112,7 +112,6 @@
                     
                 <ul>In addition to finishing my bachelors degree in computer science, I'm also currently pursuing:
                     <li>MSU Game Design and Development with Unity 2020 Specialization (in progress - 65% complete)</li>
-                    <li>IBM AI Engineering Professional Certificate (machine learning - finishing in March 2023)</li>
                 </ul>
 
                 <div class="clearfix"></div>
