--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                         <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
+                    <p>March 2023</p>
                     <p>Star Hunter is a casual VR game I created where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
                     </p>
                     <p><strong>Note:</strong> This game is only available to download on Windows or MacOS. It is not available to try online.</p>
